Fixed breaking save draft feature in post composition dialog, layout issue in autoresponder management interface

--- a/src/css/admin-ui.less
+++ b/src/css/admin-ui.less
@@ -646,6 +646,7 @@ td.message-title {
   }
   a:last-child:after {
     content: '';
+    margin:0;
   }
   a:after {
     margin-right: 1em;
